# movieAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  OBSERVABILITY.md  OPERATIONALIZATION.md  README.md  VIEW_OBSERVABILITY_GUIDE.md  api.py  cinemind.py  config.py  database.py  docker-compose.yml  env.example  migrate_tags.py  observability.py  prompt_versions.py  pyproject.toml  requirements.txt  search_engine.py  tagging.py  test_multi_hop_v4.py  test_results.json  view_cache_entry.py  view_observability.py
.cursor/: hooks.json
.cursor/hooks/: path_map.json  run-related-tests  session_track_map.json  track-scoped-work
.cursor/rules/: docs-planning.mdc  python-backend.mdc  testing-standards.mdc  web-frontend.mdc
.github/workflows/: ci.yml
data/: playground_projects.json  projects_store.json
data/exports/: README.md
data/test_results/: README.md
docker/: Dockerfile  docker-compose.demo.yml  docker-compose.yml
docs/: ADD_FEATURE_CONTEXT.md  AI_CONTEXT.md  ATTACHMENTS_SCHEMA.md  ATTACHMENT_INTENT_CLASSIFIER.md  BASELINE_INVENTORY_AND_PROTECTED_LIST.md  CHANGE_FEATURE_CONTEXT.md  KAGGLE_INTEGRATION.md  README.md  SCALING_TESTING.md  SCRIPTS_RESTRUCTURE_DELIVERABLE.md  SEMANTIC_CACHE.md  SKIP_TAVILY_LOGIC.md  SMOKE_TESTS_AND_RUN_COMMANDS.md  SOURCE_POLICY.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE.md  TESTING_SETUP_SUMMARY.md  TITLE_EXTRACTION_CONTRACT.md  VIEW_TEST_RESULT_COMMANDS.md  WIKIPEDIA_CACHE.md
docs/AIbuilding/: AI_BUILDING_MAINTAINER.md  CURSOR_MECHANISMS_FLOW.md  CURSOR_RULES.md  CURSOR_SKILLS.md  CURSOR_TEST_HOOKS.md  CURSOR_WORKFLOW_AGENTS.md  DEFECT_TO_TOOLING.md  PLANNING_DOCS_ARCHIVE.md  QUERYING.md  README.md  SESSION_LOGS.md
docs/api-contracts/: DATA_CONTRACTS.md
docs/architecture/: ATTACHMENTS_SCHEMA.md  ATTACHMENT_PIPELINE_TRACE.md  BATCH_ENRICHMENT.md  OBSERVABILITY.md  VIEW_OBSERVABILITY_GUIDE.md
docs/errors/: MOVIE_HUB_AND_SUBCONTEXT.md  README.md  WEB_UI_REGRESSIONS.md  WHERE_TO_WATCH.md
docs/features/: README.md
docs/getting-started/: ENV_AND_SECRETS.md  OPERATIONALIZATION.md  QUICKSTART.md
docs/migration/: DEPENDENCY_REGISTRY.md  RESTRUCTURE_PLAN.md  SAFE_CLEANUP_PASS_DELETION_LIST.md  SRC_REALITY_MAP_AND_MIGRATION_PLAN.md
docs/planning/: BACKLOG.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUMMARY.md
docs/practices/: BACKEND_PATTERNS.md  CSS_STYLE_GUIDE.md  DIRECTORY_STRUCTURE.md  FRONTEND_PATTERNS.md  README.md  TESTING_PRACTICES.md
docs/session_logs/: MANIFEST.md  README.md
docs/testing/: INTERACTIVE_TEST_RUNNER.md  RUN_COMMANDS_SCENARIOS.md  TESTING_GUIDE.md  TESTS_README.md
scripts/: __init__.py  analyze_test_results.py  export_to_csv.py  session_log_draft_from_signals.py  view_observability.py
scripts/analysis/: __init__.py  analyze_test_results.py
scripts/db/: __init__.py  migrate_tags.py
scripts/eval/: __main__.py
scripts/export/: __init__.py  export_to_csv.py
src/: __init__.py
tests/: KAGGLE_BEHAVIOR_TESTING.md  PLAYGROUND_SERVER.md  QUICK_START.md  README.md  README_SCENARIOS.md  __init__.py  conftest.py  evaluator.py  failure_artifact_writer.py  playground_projects_store.py  playground_runner.py  playground_server.py  playground_ui.html  report_generator.py  test_cache_correctness.py  test_candidate_verify_answer.py  test_cases.py  test_fuzzy_intent_matcher.py  test_kaggle_retrieval_adapter.py  test_prompt_versions.py  test_runner.py  test_runner_interactive.py  test_scenarios_offline.py  test_search_deduplication.py  view_test_results.py  view_test_results_graphical.py  violation_artifact_writer.py
web/: DATA_CONTRACTS.md  README.md  UI_RESPONSE_CONTRACT.md  WHERE_TO_WATCH_CONTRACT.md  index.html  projects.html
(+359 files in other folders)
