[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemind"
version = "1.0.0"
description = "CineMind — AI-powered movie analysis and discovery agent"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-dateutil>=2.8.0",
    "httpx>=0.25.0",
    "tavily-python>=0.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.24.0",
    "kagglehub[pandas-datasets]>=0.2.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.2.0",
    "pyyaml>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
scripts = [
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gold: gold-standard scenario tests",
    "explore: exploratory scenario tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ---------------------------------------------------------------------------
# ruff  (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function call in argument defaults (FastAPI Depends)
    "RUF012", # mutable class variable annotation
    "B904",   # require explicit exception chaining
    "B905",   # zip strict param
    "SIM105", # contextlib.suppress preference
    "E402",   # module import placement (test bootstrap files)
]

[tool.ruff.lint.isort]
known-first-party = ["cinemind", "config", "schemas", "services", "workflows", "integrations"]


[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/unit/planning/test_request_type_router.py" = ["E402"]
"tests/unit/search/test_kaggle_retrieval_adapter.py" = ["E402"]
"tests/unit/planning/test_request_planner_prompt_only.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy  (gradual typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false          # gradual: flip to true once coverage grows
check_untyped_defs = true
no_implicit_optional = false
ignore_missing_imports = true
exclude = ["tests/", "scripts/"]
disable_error_code = ["var-annotated", "assignment", "arg-type", "return-value", "union-attr", "no-redef", "index", "attr-defined", "misc", "no-any-return", "import-untyped"]

[[tool.mypy.overrides]]
module = [
    "cinemind.planning.*",
    "cinemind.extraction.*",
    "cinemind.llm.*",
    "cinemind.verification.*",
    "integrations.tmdb.*",
]
disallow_untyped_defs = false
